# python-whatsapp-assistant

./: README.md  example.env  pyproject.toml
app/: config.py
app/services/: openai_service.py
app/utils/: whatsapp_utils.py
