[tool.poetry]
name = "python-whatsapp-bot"
version = "0.1.0"
description = ""
authors = ["Dauletkhan <ab.dauletkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
Flask = "^3.0.2"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
